--- a/jade/index.jade
+++ b/jade/index.jade
@@ -1,4 +1,4 @@
-include mixins.jade
+include mixins/mixins.jade
 <!DOCTYPE html>
 html(lang="en")
 head
@@ -7,14 +7,16 @@ head
 	link(rel="stylesheet", href="css/main.css")
 body
 	// Fixed navbar
-	.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+	.navbar.navbar-fixed-top(role='navigation')
 		.container.padd
 			.navbar-header
 				button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
 					span.icon-bar
 					span.icon-bar
 					span.icon-bar
-				a.navbar-brand(href='#') SRomán
+				a.navbar-brand(href='#')
+					img.logo(src="img/push.png")
+
 			#collapse.navbar-collapse
 				ul.nav.navbar-nav.navbar-right
 					li.active
@@ -31,12 +33,18 @@ body
 			.row
 				.carrusel
 					+img-100-jpg("hero1")
+	
+	.main
+		.conatiner
+			#sobre_mi.pt-100
+				.row
+					
 	.main
 		.container.text-center
 			#portafolio.pt-100
 				.row
 					.title
-						.h1 PORTAFOLIO
+						.h1 PORTAFOLIO 
 						.img-icon
 							+img-100-png("habilidades_3")
 				.row
