--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,3 +1,11 @@
+@import url(https://fonts.googleapis.com/css?family=Poiret+One);
+*{
+	padding:0;
+	margin:0;
+	font-family: 'Poiret One';
+	font-size:20px;
+}
+
 .w-100{
 	width: 100%;
 
