--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -6,7 +6,12 @@
 	.logo{
 		height: 40px;
 	}
-
+}
+#contendor{
+	img{
+		width: 50%;
+		
+	}
 }
 .hvr-bounce-to-right,.navbar-brand {
 	color: #FF358B;
@@ -24,6 +29,9 @@
 	img{
 		height: 500px;
 	}
+}
+.hero1{
+	height:500px;
 }
 .col-sm-4{
 	.portafolio{
