--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,6 @@
 $Poiret:'Poiret One';
 $bg-color:#ffffff;
-$bg-color1:#01B0F0;
+$bg-celeste:#33ccff;
+$bg-white:#fff;
 $text-color:#FF358B;
+$text-white:#fff;
