--- a/css/main.css
+++ b/css/main.css
@@ -5825,21 +5825,107 @@ button.close {
 .navbar-fixed-top {
   background: #ffffff; }
 
+.header {
+  background: #33ccff;
+  color: #fff; }
+
+.icon-bar {
+  background: #33ccff; }
+
 .navbar-brand {
   padding: 5px; }
   .navbar-brand .logo {
-    height: 40px; }
+    height: 50px;
+    width: 50px;
+    display: inline-block;
+    background-size: 70%;
+    margin-top: -5px;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 0  100% 0  100% / 60%; }
 
 #contendor img {
   width: 50%; }
 
-.hvr-bounce-to-right, .navbar-brand {
-  color: #FF358B;
-  font-weight: bold; }
+#collapse ul li .inver1 {
+  color: #33ccff; }
 
-.carrusel {
+#collapse ul li .inver {
+  color: #fff; }
+
+.logo-inver1 {
+  background-image: url(../img/SARITA-IN.png);
+  box-shadow: 10px 15px 10px #3A6F77;
+  background-color: #fff; }
+
+.logo-inver {
+  background-image: url(../img/SARITA-02.png);
+  background-color: #fff;
+  box-shadow: 10px 15px 10px #33ccff; }
+
+.navbar-nav {
+  transform: translateX(0%);
+  transition: all 0.8s ease-in-out; }
+
+.navbar-toggle {
+  margin-top: 18px;
+  margin-bottom: -16px; }
+
+.navbar-toggle:hover {
+  cursor: pointer; }
+
+.navbar-toggle.open .icon-bar {
+  background: #fff; }
+
+.navbar-collapse {
+  border-top: 0px; }
+
+.navbar-toggle.open .icon-bar:first-child {
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-transform-origin: 10px;
+  -moz-transform-origin: 10px;
+  -ms-transform-origin: 10px;
+  -o-transform-origin: 10px;
+  transform-origin: 0px; }
+
+.navbar-toggle.open .icon-bar:nth-child(2) {
+  opacity: 0; }
+
+.navbar-toggle.open .icon-bar:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-transform-origin: 8px;
+  -moz-transform-origin: 8px;
+  -ms-transform-origin: 8px;
+  -o-transform-origin: 8px;
+  transform-origin: 2.5px; }
+
+.bar {
+  background: #fff; }
+
+.bar-inv {
+  background: #33ccff; }
+
+.icon-bar {
+  -webkit-transition-property: all;
+  -moz-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 0.2s;
+  -moz-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  display: block;
+  width: 26px;
+  height: 2px;
+  margin: 0 0 5px; }
+
+#carrusel {
   margin-top: 50px; }
-  .carrusel img {
+  #carrusel .item {
     height: 100vh; }
 
 .img-icon img {
@@ -5870,5 +5956,20 @@ button.close {
   .col-sm-4 .portafolio a:hover ~ .informacion {
     visibility: visible;
     background: red; }
+
+.title {
+  color: #33ccff; }
+
+.col-2 {
+  height: 100vh;
+  display: inline-block;
+  width: 45%;
+  border-left: 55px solid transparent; }
+
+.row .col-2:nth-child(2) {
+  background: #33ccff;
+  border-: 13px solid #fff;
+  -ms-transform-origin: 100% 100%;
+  -o-transform-origin: 100% 100%; }
 
 /*# sourceMappingURL=main.css.map */
