--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 @import url(https://fonts.googleapis.com/css?family=Poiret+One);
+@import url(https://fonts.googleapis.com/css?family=Sigmar+One);
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -5814,13 +5815,27 @@ button.close {
   padding: 0;
   margin: 0;
   font-family: 'Poiret One';
-  font-size: 20px; }
+  font-size: 20px;
+  font-weight: bold;
+  box-sizing: border-box; }
 
 .w-100 {
   width: 100%; }
 
 .pt-100 {
   padding-top: 100px; }
+
+.main {
+  padding-top: 50px; }
+
+hr {
+  margin: 0; }
+
+a:hover {
+  text-decoration: none; }
+
+.pd-50 {
+  padding-top: 50px; }
 
 .navbar-fixed-top {
   background: #ffffff; }
@@ -5923,45 +5938,20 @@ button.close {
   height: 2px;
   margin: 0 0 5px; }
 
-#carrusel {
-  margin-top: 50px; }
-  #carrusel .item {
-    height: 100vh; }
-
-.img-icon img {
-  height: 500px; }
-
-.hero1 {
-  height: 500px; }
-
-.col-sm-4 .portafolio {
-  position: relative;
-  height: 200px; }
-  .col-sm-4 .portafolio .pantalla {
-    position: absolute;
-    border: 13px solid black;
-    border-radius: 5px; }
-    .col-sm-4 .portafolio .pantalla .btn-star {
-      position: absolute;
-      bottom: -12px;
-      right: -10px;
-      border-radius: 50%;
-      height: 10px;
-      width: 12px;
-      border: 1px solid yellow; }
-  .col-sm-4 .portafolio a .informacion {
-    visibility: hidden;
-    position: absolute;
-    height: 200px; }
-  .col-sm-4 .portafolio a:hover ~ .informacion {
-    visibility: visible;
-    background: red; }
+.carousel-inner {
+  padding-top: 50px;
+  height: 100vh; }
+  .carousel-inner .item img {
+    width: 100%; }
 
 .title {
-  color: #33ccff; }
+  color: #33ccff;
+  font-family: "Sigmar One";
+  font-size: 3rem;
+  padding-top: 30px;
+  padding-bottom: 30px; }
 
 .col-2 {
-  height: 100vh;
   display: inline-block;
   width: 45%;
   border-left: 55px solid transparent; }
@@ -5971,5 +5961,227 @@ button.close {
   border-: 13px solid #fff;
   -ms-transform-origin: 100% 100%;
   -o-transform-origin: 100% 100%; }
+
+.col-etiqueta p {
+  color: black;
+  font-size: 30px; }
+
+.ln1 {
+  background: #33ccff;
+  height: 1px; }
+
+.contenedor {
+  height: 30px; }
+
+.etiqueta {
+  width: 0px;
+  border-left: 50px solid #33ccff;
+  border-right: 50px solid #33ccff;
+  left: 50%;
+  margin-left: -50px;
+  position: relative; }
+
+.etiq {
+  height: 190px;
+  border-bottom: 35px solid transparent;
+  top: 0; }
+
+.etiq2 {
+  border-top: 35px solid transparent;
+  position: relative;
+  bottom: 0;
+  height: 160px; }
+
+.poligono {
+  margin: 20px 0;
+  width: 120px;
+  height: 120px;
+  background-image: url("../img/sobre_mi.jpg");
+  background-position: 50% 34%;
+  background-size: 150%;
+  border-radius: 50%;
+  margin-left: 75px; }
+
+.col-foto p:first-child {
+  font-weight: lighter;
+  font-size: 30px;
+  font-family: "Sigmar One";
+  color: #33ccff;
+  margin-top: 50px; }
+.col-foto hr:nth-child(2) {
+  background: #33ccff;
+  height: 3px;
+  border: none; }
+.col-foto p:nth-child(3) a {
+  display: inline-block;
+  width: 240px;
+  margin-top: 15px;
+  font-weight: bold; }
+.col-foto p:nth-child(3) a:hover {
+  color: white;
+  background: #33ccff; }
+
+.description .col-sm-6 p {
+  margin-top: 25px;
+  font-family: "Poiret One";
+  color: #2C3E50;
+  font-size: 19px;
+  font-weight: bold; }
+.description .col-sm-6 .foto {
+  height: 350px;
+  width: 90%; }
+.description .col-sm-6 h2 {
+  font-weight: bold;
+  color: #337ab7; }
+
+.container .portafolio .col-sm-8 img {
+  height: 250px; }
+
+.img-icon img {
+  height: 500px; }
+
+.hero1 {
+  height: 500px; }
+
+.col-sm-4 .portafolio {
+  position: relative;
+  height: 250px;
+  margin-bottom: 20px; }
+  .col-sm-4 .portafolio .pantalla {
+    box-shadow: -5px -5px 5px 0px #d1d1d1;
+    position: absolute;
+    border: 13px solid black;
+    border-radius: 8px; }
+    .col-sm-4 .portafolio .pantalla .btn-star {
+      position: absolute;
+      bottom: -10px;
+      right: 50%;
+      border-radius: 50%;
+      height: 10px;
+      width: 12px;
+      margin-right: -6px;
+      background-image: url("../img/windows.png");
+      background-size: cover; }
+    .col-sm-4 .portafolio .pantalla .parante {
+      position: absolute;
+      width: 50px;
+      bottom: -43px;
+      height: 30px;
+      right: 50%;
+      background: black;
+      margin-right: -25px;
+      box-shadow: -11px 1px 7px -2px #d1d1d1; }
+    .col-sm-4 .portafolio .pantalla .base {
+      position: absolute;
+      width: 100px;
+      bottom: -50px;
+      height: 0px;
+      right: 50%;
+      margin-right: -50px;
+      border-right: 5px solid transparent;
+      border-left: 5px solid transparent;
+      border-bottom: 10px solid black; }
+  .col-sm-4 .portafolio a .informacion {
+    visibility: hidden;
+    position: absolute;
+    height: 200px; }
+  .col-sm-4 .portafolio a:hover ~ .informacion {
+    visibility: visible;
+    background: red; }
+
+.cont-habi {
+  height: 170px;
+  width: 100%;
+  position: relative;
+  margin-top: 20px; }
+  .cont-habi .cuello {
+    position: absolute;
+    right: 50%;
+    margin-right: -30px;
+    width: 60px;
+    height: 10px;
+    border-radius: 5px;
+    border: 2px solid #2C3E50; }
+  .cont-habi .tubo {
+    width: 40px;
+    height: 130px;
+    position: absolute;
+    right: 50%;
+    margin-right: -20px;
+    top: 9px;
+    border: 2px solid #2C3E50;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px; }
+  .cont-habi .cont {
+    width: 40px;
+    height: 104px;
+    position: absolute;
+    right: 50%;
+    margin-right: -20px;
+    top: 35px;
+    border: 2px solid #2C3E50;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background: red; }
+
+.field1 .col-sm-3:first-child .cont-habi .cont {
+  height: 104px;
+  background: red;
+  top: 35px; }
+.field1 .col-sm-3:nth-child(2) .cont-habi .cont {
+  height: 104px;
+  background: green;
+  top: 35px; }
+.field1 .col-sm-3:nth-child(3) .cont-habi .cont {
+  height: 104px;
+  background: #3498DB;
+  top: 35px; }
+.field1 .col-sm-3:last-child .cont-habi .cont {
+  height: 104px;
+  background: #CDBFE3;
+  top: 35px; }
+
+.field2 {
+  margin-bottom: 50px; }
+  .field2 .col-sm-3:first-child .cont-habi .cont {
+    height: 104px;
+    background: #F300D3;
+    top: 35px; }
+  .field2 .col-sm-3:nth-child(2) .cont-habi .cont {
+    height: 104px;
+    background: yellow;
+    top: 35px; }
+  .field2 .col-sm-3:nth-child(3) .cont-habi .cont {
+    height: 104px;
+    background: blue;
+    top: 35px; }
+  .field2 .col-sm-3:last-child .cont-habi .cont {
+    height: 104px;
+    background: orange;
+    top: 35px; }
+
+#contacto {
+  padding-top: 50px;
+  height: 540px;
+  background-image: url("../img/contacto4.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  color: white; }
+  #contacto .title {
+    color: white; }
+
+.redes a {
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  color: white;
+  font-size: 60px; }
+.redes a:hover {
+  text-decoration: none; }
+
+footer {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #2C3E50; }
 
 /*# sourceMappingURL=main.css.map */
