--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,9 @@
 $Poiret:'Poiret One';
+$Sigmar:'Sigmar One';
 $bg-color:#ffffff;
 $bg-celeste:#33ccff;
 $bg-white:#fff;
 $text-color:#FF358B;
 $text-white:#fff;
+$black:#2C3E50;
+$ensayo:#2C3E50;
