--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,9 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Poiret+One);
+@import url(https://fonts.googleapis.com/css?family=Sigmar+One);
 *{
 	padding:0;
 	margin:0;
 	font-family: 'Poiret One';
 	font-size:20px;
+	font-weight: bold;
+	box-sizing: border-box;
 }
 
 .w-100{
@@ -13,4 +16,19 @@
 .pt-100{
 	padding-top: 100px;
 
+}
+.main{
+	padding-top: 50px;
+	//height: 100vh;
+
+}
+hr{
+	margin:0;
+}
+
+a:hover{
+	text-decoration: none;
+}
+.pd-50{
+	padding-top: 50px;
 }
