--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -105,13 +105,139 @@
 	margin: 0 0 5px;
 }
 /// primer
-#carrusel{
-	margin-top: 50px;
+.carousel-inner{
+	padding-top: 50px;
+	height: 100vh;
 	.item{
-		height: 100vh;
+		img{
+			width: 100%;
+		}
 	}
+}
+////titulos
+.title{
+	color:$bg-celeste;
+	font-family: $Sigmar;
+	font-size: 3rem;
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
+////
+.col-2{
+	display:inline-block;
+	width:45%;
+	border-left: 55px solid transparent
+}
+.row .col-2:nth-child(2){
+	background:$bg-celeste;
+	border-: 13px solid #fff;
+	 -ms-transform-origin:100% 100%; 
+	 -o-transform-origin:100% 100%
+}
+// sobre mi
+.col-etiqueta{
+	p{
+		color:black;
+		font-size: 30px;
+	}
+}
+.ln1{
+	background: $bg-celeste;
+	height: 1px;
 
 }
+.contenedor{
+	height: 30px;
+}
+.etiqueta{
+    width: 0px;
+
+    border-left: 50px solid $bg-celeste;
+    border-right: 50px solid $bg-celeste;
+    left:50%;
+    margin-left:-50px;
+    position: relative;
+ }
+.etiq  {
+	height: 190px;
+    border-bottom: 35px solid transparent;
+    top:0;
+}
+.etiq2{
+    border-top: 35px solid transparent;
+    position: relative;
+    bottom: 0;
+    height: 160px;
+}
+ .poligono{
+ 	margin:20px 0;
+ 	width: 120px;
+ 	height: 120px;
+ 	background-image:url('../img/sobre_mi.jpg');
+    background-position: 50% 34%;
+    background-size: 150%;
+    border-radius: 50%;
+    margin-left: 75px;
+ }
+.col-foto{
+	p:first-child{
+		font-weight: lighter;
+		font-size: 30px;
+		font-family: $Sigmar;
+		color: $bg-celeste;
+		margin-top:50px;
+	}
+	hr:nth-child(2){
+		background:$bg-celeste;
+		height: 3px;
+		border: none;
+	}
+	p:nth-child(3){
+		a{
+			display: inline-block;
+			width: 240px;
+			margin-top: 15px;
+			font-weight: bold;
+		}
+		a:hover{
+			color: white;
+			background: $bg-celeste;
+		}
+	}
+}
+.description{
+	.col-sm-6{
+		p{
+			margin-top: 25px;
+			font-family: $Poiret;
+			color:$black;
+			font-size: 19px;
+			font-weight: bold;
+		}
+	}
+	.col-sm-6{
+		.foto{
+			height: 350px;
+			width: 90%;
+		}
+		h2{
+			font-weight:bold;
+			color: #337ab7;
+		}	
+	}
+}
+//Portafolio
+.container{
+	.portafolio{
+		.col-sm-8{
+			img{
+				height: 250px;
+			}
+		}
+
+	}
+}
+//portafolio
 .img-icon{
 	img{
 		height: 500px;
@@ -123,19 +249,44 @@
 .col-sm-4{
 	.portafolio{
 		position: relative;
-		height: 200px;
+		height: 250px;
+		margin-bottom: 20px;
 		.pantalla{
+			box-shadow: -5px -5px 5px 0px rgba(209,209,209,1);
 			position: absolute;
 			border: 13px solid black;
-			border-radius: 5px;
+			border-radius: 8px;
 			.btn-star{
 				position: absolute;
-				bottom:-12px;
-				right: -10px;
+				bottom:-10px;
+				right: 50%;
 				border-radius: 50%;
 				height: 10px;
 				width: 12px;
-				border: 1px solid yellow;
+				margin-right: -6px;
+				background-image: url('../img/windows.png');
+   				background-size: cover;
+			}
+			.parante{
+				position: absolute;
+				width: 50px;
+				bottom: -43px;
+				height: 30px;
+				right: 50%;
+				background: black;
+				margin-right: -25px;
+				box-shadow: -11px 1px 7px -2px rgba(209,209,209,1);
+			}
+			.base{
+				position: absolute;
+				width: 100px;
+				bottom: -50px;
+				height: 0px;
+				right: 50%;
+				margin-right: -50px;
+    			border-right: 5px solid transparent;
+    			border-left: 5px solid transparent;
+    			border-bottom: 10px solid black;
 			}
 		}
 		a {
@@ -151,21 +302,159 @@
 		}
 	}
 }
-////titulos
-.title{
-	color:$bg-celeste;
+// Habilidades
+// .col-sm-3
+// 	.cont-habi
+// 		.cuello
+// 		.tubo
+// 		.cont
+// 		p=texto
+.cont-habi{
+	height: 170px;
+	width: 100%;
+	position: relative;
+	margin-top:20px;
+	.cuello{
+		position: absolute;
+		right: 50%;
+		margin-right: -30px;
+		width: 60px;
+		height: 10px;
+		border-radius: 5px;
+		border: 2px solid $ensayo;
+	}
+	.tubo{
+		width: 40px;
+		height: 130px;
+		position: absolute;
+		right: 50%;
+		margin-right: -20px;
+		top: 9px;
+		border: 2px solid $ensayo;
+		border-bottom-left-radius:15px ;
+		border-bottom-right-radius:15px ;
+	}
+	.cont{
+		width: 40px;
+		height: 104px;
+		position: absolute;
+		right: 50%;
+		margin-right:-20px;
+		top: 35px;
+		border: 2px solid $ensayo;
+		border-bottom-left-radius:15px ;
+		border-bottom-right-radius:15px ;
+		background: red;
+	}
+
 }
-////
-.col-2{
-	height:100vh;
-	display:inline-block;
-	width:45%;
-	border-left: 55px solid transparent
+.field1{
+	.col-sm-3:first-child{
+		.cont-habi{
+			.cont{
+				height: 104px;
+				background: red;
+				top: 35px;
+			}
+		}
+	}
+	.col-sm-3:nth-child(2){
+		.cont-habi{
+			.cont{
+				height: 104px;
+				background: green;
+				top: 35px;
+			}
+		}
+	}
+	.col-sm-3:nth-child(3){
+		.cont-habi{
+			.cont{
+				height: 104px;
+				background: #3498DB;
+				top: 35px;
+			}
+		}
+	}
+	.col-sm-3:last-child{
+		.cont-habi{
+			.cont{
+				height: 104px;
+				background: #CDBFE3;
+				top: 35px;
+			}
+		}
+	}
+
 }
-.row .col-2:nth-child(2){
-	
-	background:$bg-celeste;
-	 border-: 13px solid #fff;
-	 -ms-transform-origin:100% 100%; 
-	 -o-transform-origin:100% 100%
+.field2{
+	margin-bottom: 50px;
+	.col-sm-3:first-child{
+		.cont-habi{
+			.cont{
+				height: 104px;
+				background: #F300D3;
+				top: 35px;
+			}
+		}
+	}
+	.col-sm-3:nth-child(2){
+		.cont-habi{
+			.cont{
+				height: 104px;
+				background: yellow;
+				top: 35px;
+			}
+		}
+	}
+	.col-sm-3:nth-child(3){
+		.cont-habi{
+			.cont{
+				height: 104px;
+				background: blue;
+				top: 35px;
+			}
+		}
+	}
+	.col-sm-3:last-child{
+		.cont-habi{
+			.cont{
+				height: 104px;
+				background: orange;
+				top: 35px;
+			}
+		}
+	}
+
+}
+/// contacto
+#contacto{
+	padding-top: 50px;
+	height: 540px;
+	background-image: url("../img/contacto4.jpg");
+	background-size: cover;
+	background-attachment: fixed;
+	color: white;
+	.title{
+		color: white;
+	}
+}
+	.redes{
+		a{
+			display: inline-block;
+			width: 60px;
+			height: 60px;
+			color:white;
+			font-size: 60px;
+		}
+		a:hover{
+			text-decoration: none;
+		}
+	}
+//footer
+footer{
+	padding-top: 20px;
+	padding-bottom: 20px;
+	//background: $bg-celeste;
+	color: $black;
 }
