--- a/jade/index.jade
+++ b/jade/index.jade
@@ -52,6 +52,29 @@ body
 							+img-100-jpg("hero6")
 							.carousel-caption
 
+	.main
+		.container
+			.row
+				.global
+					.contendor
+						input#toggle(type="checkbox")
+						label.fa.fa-power-off#botton(for="toggle")
+				
+						.luces
+							.caja
+								img#foco(src="img/foco.png") 
+								img#luz(src="img/luz.png")
+							.caja
+								img#foco(src="img/foco.png") 
+								img#luz(src="img/luz.png")
+							.caja
+								img#foco(src="img/foco.png") 
+								img#luz(src="img/luz.png")
+							.caja
+								img#foco(src="img/foco.png") 
+								img#luz(src="img/luz.png")
+
+						
 	#Sobremi
 		.container.text-center
 			.row
